--- a/www/stylesheet.css
+++ b/www/stylesheet.css
@@ -1,6 +1,7 @@
 
 body {
     font-family:Verdana;
+    background-color:black;
     }
 
 .bargraph {
@@ -9,7 +10,7 @@ body {
     width:300px;
     text-align:left;
     margin:10px;
-    border-radius:5px
+    border-radius:10px;
     font-family:Verdana;
 }
 
@@ -28,10 +29,48 @@ body {
     border-radius:5px;
     }
 
-#messages {
-    margin:10px;
+#title {
+    background-color:#808080;
+    color:white;
     padding:10px;
-    width:90%;
+    border-top-right-radius:10px;
+    border-top-left-radius:10px;
+    margin:0px;
+    }
+#menu {
+    background-color:#808080;
+    padding:0px;
+    }
+
+#menu li {
+    text-decoration:none;
+    display:inline;
+    background-color:#a0a0a0;
+    padding:5px;
+    border-radius:5px;
+    }
+
+#menu a {
+    text-decoration:none;
+    }
+
+#menu li:hover {
+    background-color:#c0c0c0;
+    }
+
+#footer {
+    background-color:#808080;
+    color:white;
+    padding:10px;
+    border-bottom-right-radius:10px;
+    border-bottom-left-radius:10px;
+    margin:0px;
+    text-align:center;
+    }
+
+#messages {
+    margin:0px;
+    padding:10px;
     background-color:#d0d0d0;
     font-family:Verdana;
     }
@@ -40,4 +79,22 @@ body {
     border-radius:5px;
     background-color:#f0f0f0;
     width:50%;
+    padding:10px;
     }
+
+#bumpers {
+    border-radius:5px;
+    background-color:#f0f0f0;
+    }
+
+
+#camera {
+    border: solid 1px white;
+    margin: 5px;
+    }
+
+#ircamera {
+    border: solid 1px white;
+    margin: 5px;
+    }
+
